Remove simulation related code + make communication work

--- a/Arduino/Trinket/Makefile
+++ b/Arduino/Trinket/Makefile
@@ -1,16 +1,12 @@
 
-default: upload
+default: main.o
 	
 main.o: main.c
-	avr-gcc -Wall -Og -DF_CPU=16000000 -mmcu=attiny85 $^ -o build/$@
-
-simulate: main.o
-	~/Development/C/simavr/simavr/run_avr -mcu attiny85 -f 16000000 -t ./build/main.o
-	gtkwave gtkwave_trace.vcd
+	avr-gcc -Wall -Og -DF_CPU=16000000 -mmcu=attiny85 -g $^ -o build/$@
 
 main-asm: main.c
 	avr-gcc -Wall -Og -S -DF_CPU=16000000 -mmcu=attiny85 $^ -o build/$@.s
 
-upload: main
+upload: main.o
 	avr-objcopy -O ihex -R .eeprom build/$^ build/$^.hex
 	/home/leonvv/Development/Arduino/Trinket_Arduino_Linux/trinket-arduino-1.0.5/hardware/tools/avrdude -p attiny85 -c usbtiny -C /home/leonvv/Development/Arduino/Trinket_Arduino_Linux/trinket-arduino-1.0.5/hardware/tools/avrdude.conf -U flash:w:build/$^.hex
