--- a/Laptop/package.json
+++ b/Laptop/package.json
@@ -4,6 +4,8 @@
   "description": "Writes data from a PS3 controller to an Arduino and a web browser",
   "dependencies": {
     "express": "^4.10.2",
+    "node-hid": "^0.5.1",
+    "serialport": "^2.0.6",
     "socket.io": "^1.3.7"
   }
 }
